// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render with minimal props 1`] = `
<div
  className="css-e1s1x1"
  data-test-id="basicDialog"
>
  <div
    className="css-1y16c93"
  />
  <div
    className="css-1rlrgd0"
  />
</div>
`;

exports[`<BasicDialog /> should show correct number of buttons 1`] = `
<div
  className="css-e1s1x1"
  data-test-id="basicDialog"
>
  <div
    className="css-1y16c93"
  />
  <div
    className="css-1rlrgd0"
  >
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action0"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action0"
      />
    </Button>
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action1"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action1"
      />
    </Button>
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action2"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action2"
      />
    </Button>
  </div>
</div>
`;

exports[`<BasicDialog /> should trigger correct actions 1`] = `
<div
  className="css-e1s1x1"
  data-test-id="basicDialog"
>
  <div
    className="css-1y16c93"
  />
  <div
    className="css-1rlrgd0"
  >
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action0"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action0"
      />
    </Button>
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action1"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action1"
      />
    </Button>
    <Button
      className="css-yc1xgj "
      disabled={false}
      flat={true}
      key="action2"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        role={null}
        string="action2"
      />
    </Button>
  </div>
</div>
`;
